--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Top Navbar with Logo</title>
-    <link rel="stylesheet" href="/CSS/style.css" />
+    <link rel="stylesheet" href="/Ecom-demo/style.css" />
     <link rel="shortcut icon" href="/Images/logo.png" type="image/x-icon" />
   </head>
   <body>
@@ -29,10 +29,10 @@
       <div class="container">
         <div class="rightcontainer">
           <div>
-      <h1>Style With Space</h1>
+      <h1>Style With Bhuvan-365</h1>
     </br>
       <p>
-        Hello Coder!! My name is Raj Sigdel. Currently, I am studying BCA at
+        Hello Coder!! My name is Bhuvan Bhattai . Currently, I am studying BCA at
         ASMT. Learning HTML, CSS & Javascript.
       </p>
     </div>
@@ -45,6 +45,6 @@
       </div>
       
     <div class="footer">
-      <p>Copyright &copy; 2023 Raj Sigdel</p>
+      <p>Copyright &copy; 2023 Bhuvan Bhattarai</p>
   </body>
 </html>
