--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="descrption" content="buy artisen goods and service in nepal">
-    <link rel="shortcut icon" href="/Ecom-demo/images/favi icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Ecom-demo/images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>cartGo</title>
 </head>
 <body>
     <nav>
         <div>
-            <img src="/Ecom-demo/images/favi icon.png" alt="Logo">
+            <img src="/Ecom-demo/images/logo.png" alt="Logo">
         </div>
         <ul>
             <li><a href="#">HOME</a></li>
@@ -25,8 +25,8 @@
     <div>
         <img src="/Ecom-demo/images/Machhapuchre2.jpg" alt="banner">
         <div>
-            <h1>BCA 2nd SEM!</h1>
-            <p>Talk less, code more!</p>
+            <h1>Your Ecom</h1>
+            <p> your choice</p>
         </div>
     </div>
 </header>
