--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div>
+        <div class="logo">
             <img src="/Ecom-demo/images/logo.png" alt="Logo">
         </div>
         <ul>
