--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div class="logo">
-            <img src="/Ecom-demo/images/logo.png" alt="Logo">
+            <img src="/Ecom-demo/images/logo_nobg.png" alt="Logo">
         </div>
         <ul>
             <li><a href="#">HOME</a></li>
