footer issue fixed

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="foot">
             <div class="foot1">
                 <img src="/Ecom-demo/images/logo_nobg.png" alt="">
-                <div class="cmpName">cartGo delivers</div>
+                <div class="cmpName">CARTGO DELIVERS</div>
             </div>
             <div class="foot2">
                 <ul>
@@ -147,7 +147,7 @@
                     </svg></li>
             </ul>
         </div>
-        <div class="copy">
+        <div class="copyright">
             <p>Copyright © 2023 cartGo. All rights reserved.</p>
     </footer>
 </body>
