small change in card

--- a/index.html
+++ b/index.html
@@ -60,7 +60,41 @@
                     consequuntur at veniam vero. Excepturi, velit consequuntur
                     quisquam temporibus porro illo tenetur.</p>
             </div>
+             <div class="productcard">
+                <img src="/Ecom-demo/images/shoe.png" alt="">
+                <h3>Shoe</h3>
+                <p> lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                    officia, necessitatibus, qui labore ullam quod aut earum odit
+                    consequuntur at veniam vero. Excepturi, velit consequuntur
+                    quisquam temporibus porro illo tenetur.</p>
+            </div>
+            <div class="productcard">
+                <img src="/Ecom-demo/images/cup.png" alt="">
+                <h3>Cup</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                    officia, necessitatibus, qui labore ullam quod aut earum odit
+                    consequuntur at veniam vero. Excepturi, velit consequuntur
+                    quisquam temporibus porro illo tenetur.</p>
+            </div>
+
+             <div class="productcard">
+                <img src="/Ecom-demo/images/shoe.png" alt="">
+                <h3>Shoe</h3>
+                <p> lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                    officia, necessitatibus, qui labore ullam quod aut earum odit
+                    consequuntur at veniam vero. Excepturi, velit consequuntur
+                    quisquam temporibus porro illo tenetur.</p>
+            </div>
+            <div class="productcard">
+                <img src="/Ecom-demo/images/cup.png" alt="">
+                <h3>Cup</h3>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias
+                    officia, necessitatibus, qui labore ullam quod aut earum odit
+                    consequuntur at veniam vero. Excepturi, velit consequuntur
+                    quisquam temporibus porro illo tenetur.</p>
+            </div>
         </div>
+
     </section>
     <section>
         <h1 class="tour">Store Tour</h1>
