added customer data

--- a/table.html
+++ b/table.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 <link rel="stylesheet" href="table.css">
+
 </head>
 <body>
     
-    <h1>Student Data</h1>
+    <h1>Customer data</h1>
     <table>
         <tr>
             <th>ID</th>
@@ -19,32 +21,32 @@
         </tr>
         <tr>
             <td>1</td>
-            <td><img src="/Ecom-demo/images/elon.jfif"  width="200px" alt="Ram" class="profile-img profile-img1"></td>
-            <td>Ram</td>
+            <td><img src="/Ecom-demo/images/download.jfif"  width="200px" class="profile-img profile-img1"></td>
+            <td>Elon Musk</td>
             <td>KTM</td>
             <td>
-                <button>Edit</button>
-                <button>Delete</button>
+                <button title="Edit"><i class="fas fa-cut"></i></button>
+                <button title="Delete"><i class="fas fa-trash"></i></button>
             </td>
         </tr>
         <tr>
             <td>2</td>
-            <td><img src="/Ecom-demo/images/elon.jfif" width="200px" alt="Ram" class="profile-img profile-img2"></td>
-            <td>Sita</td>
+            <td><img src="/Ecom-demo/images/download.jfif" width="200px" class="profile-img profile-img2"></td>
+            <td>Tesla</td>
             <td>PKR</td>
             <td>
-                <button>Edit</button>
-                <button>Delete</button>
+                <button title="Edit"><i class="fas fa-cut"></i></button>
+                <button title="Delete"> <i class="fas fa-trash"></i></button>
             </td>
         </tr>
         <tr>
             <td>3</td>
-            <td><img src="/Ecom-demo/images/elon.jfif" width="200px" alt="Ram" class="profile-img profile-img3"></td>
-            <td>Hari</td>
+            <td><img src="/Ecom-demo/images/download.jfif" width="200px" class="profile-img profile-img3"></td>
+            <td>space-X</td>
             <td>KTM</td>
             <td>
-                <button>Edit</button>
-                <button>Delete</button>
+                <button title="Edit"><i class="fas fa-cut"></i></button>
+                <button title="Delete"><i class="fas fa-trash"></i></button>
             </td>
         </tr>
     </table>
